Version 0.4.2
    * [add] #44 Configuration: set working directory for mongo shell
    * [add] #43 Add expand/collapse actions for the mongo explorer
    * [fix] #42 Console always connects with 'test' database

Version 0.4.1
    * [fix] #40 NullPointerException when database name is specified
    * [upd] #41 Make the port field a little larger

Version 0.4.0
    * [fix] #39 Mongo connection leak
    * [fix] #33 Error marker in popup points to incorrect position
    * [fix] #32 $unwind operator does not work
    * [fix] #35 No way to connect to server if Autoconnect is disabled
    * [add] #31 Specific database can be set in the configuration
    * [add] #30 Results are rendered in a TreeTable

Version 0.3.0:
    * [fix] Darcula settings icon is not displayed on the explorer when no server has been set
    * [fix] #27 The plugin should not connect to default localhost/27017 when running for the first time
    * [add] #20 Support more than 1 server (See the README on how to manage them)
    * [add] #6 Show results collection in a new tab
    * [add] Mongo shell can run for each configuration
    * [add] #26 Enable/Disable mongo server connection on IDE startup
    * [add] #24 Collection sort
    * [add] Expand / Collapse All for tree results
    * [upd] #29 Change Run Query Shortcut 'CTRL+F5' to 'CTRL+ENTER'

Version 0.2.1:
    * [add] Darcula theme support
    * [fix] Shell arguments are not saved in the configuration

Version 0.2.0:
    * [fix] #18 If server auth is enabled, use credentials when list Databases
    * [add] #19 Refresh databases button available in the explorer panel
    * [add] Mongo shell integration
    * [add] Configuration: Mongo shell options (path and program arguments)
    * [upd] migrate to the mongo-java-driver 2.10.1

Version 0.1.2:
    * [upd] Improve feedback when the query execution fails
    * [upd] #15 Improve feedback when server is not found

Version 0.1.1:
    * [fix] #13 CollectionUtils not found