@@ -1,7 +1,9 @@
 Version 0.4.2
     * [add] #44 Configuration: set working directory for mongo shell
     * [add] #43 Add expand/collapse actions for the mongo explorer
-    * [fix] #42 Console always connects with 'test' database
+    * [add] 'Refresh' from toolbar refreshes all servers, 'Refresh' from popup refreshes only the selected server
+    * [upd] Failover when cannot connect to a server
+    * [fix] #42 user database is not passed to the URI
 
 Version 0.4.1
     * [fix] #40 NullPointerException when database name is specified
